--- a/application/view/templates/padrao.html
+++ b/application/view/templates/padrao.html
@@ -150,6 +150,7 @@ h2{
   <a href="{{url_for('rh')}}">RH</a>
   <a href="{{url_for('compras')}}">Compras</a>
   <a href="{{url_for('engenharia')}}">Engenharia</a>
+  <a href="{{url_for('faturamento')}}">Faturamento</a>
 
  
   
